--- a/index.html
+++ b/index.html
@@ -71,46 +71,22 @@
       <tbody>
         <tr>
           <td>
-            <img
-              src="https://bkimg.cdn.bcebos.com/pic/0ff41bd5ad6eddc43e9ce64e38dbb6fd5266330f"
-              alt="同伴1"
-              width="98"
-            />
+            <img src="img/01-01.jpg" alt="同伴1" width="98" />
           </td>
           <td>
-            <img
-              src="https://bkimg.cdn.bcebos.com/pic/3801213fb80e7bec435051542e2eb9389a506bf8"
-              alt="同伴2"
-              width="98"
-            />
+            <img src="img/01-02.jpg" alt="同伴2" width="98" />
           </td>
           <td>
-            <img
-              src="https://bkimg.cdn.bcebos.com/pic/c9fcc3cec3fdfc03f043bf0dd53f8794a4c2264f"
-              alt="同伴3"
-              width="98"
-            />
+            <img src="img/01-03.jpg" alt="同伴3" width="98" />
           </td>
         </tr>
       </tbody>
     </table>
 
     <h2 id="toc4">人物图片</h2>
-    <img
-      src="https://bkimg.cdn.bcebos.com/pic/96dda144ad34598245caa5290ef431adcaef84cd"
-      alt="图片1"
-      width="500"
-    />
-    <img
-      src="https://bkimg.cdn.bcebos.com/pic/d53f8794a4c27d1e8d377c831ad5ad6eddc43867"
-      alt="图片2"
-      width="500"
-    />
-    <img
-      src="https://bkimg.cdn.bcebos.com/pic/9825bc315c6034a8e5716dd4ca134954082376d0"
-      alt="图片3"
-      width="500"
-    />
+    <img src="img/02-01.jpg" alt="图片1" width="500" />
+    <img src="img/02-02.jpg" alt="图片2" width="500" />
+    <img src="img/02-03.jpg" alt="图片3" width="500" />
 
     <h2 id="toc5">重要事件</h2>
     <ul>
